src/parse/snapshots/dilaria__parse__test__primary__empty_array_literal.snap
---
source: src/parse/test.rs
assertion_line: 653
expression: ast

---
Literal(
    Array(
        [],
        Span {
            start: 0,
            end: 0,
        },
    ),
)
