src/parse/snapshots/dilaria__parse__test__primary__false.snap
---
source: src/parse/test.rs
expression: ast
---
Literal(
    Boolean(
        false,
        Span(
            0..0,
        ),
    ),
)
