src/parse/snapshots/dilaria__parse__test__primary__null.snap
---
source: src/parse/test.rs
assertion_line: 646
expression: ast

---
Literal(
    Null(
        Span {
            start: 0,
            end: 0,
        },
    ),
)
