src/parse/snapshots/dilaria__parse__test__primary__number.snap
---
source: src/parse/test.rs
expression: ast
---
Literal(
    String(
        "uwu",
        Span(
            0..0,
        ),
    ),
)
