src/parse/snapshots/dilaria__parse__test__primary__r#false.snap
---
source: src/parse/test.rs
assertion_line: 632
expression: ast

---
Literal(
    Boolean(
        false,
        Span {
            start: 0,
            end: 0,
        },
    ),
)
