src/parse/snapshots/dilaria__parse__test__primary__r#true.snap
---
source: src/parse/test.rs
assertion_line: 639
expression: ast

---
Literal(
    Boolean(
        true,
        Span {
            start: 0,
            end: 0,
        },
    ),
)
