src/parse/snapshots/dilaria__parse__test__primary__single_array_literal_trailing_comma.snap
---
source: src/parse/test.rs
expression: ast
---
Literal(
    Array(
        [
            Literal(
                Number(
                    10.0,
                    Span(
                        0..0,
                    ),
                ),
            ),
        ],
        Span(
            0..0,
        ),
    ),
)
